# Ising_model_rust

./: Cargo.toml  README.md  plot.py
src/: SignalContainer.rs  atomistic_simulation.rs  executors.rs  lat_node.rs  lattice_structure.rs  lib.rs  main.rs  main_test.rs  signal_container.rs  sim_params.rs  test.rs  thread_workers.rs
