[package]
name = "ising_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
rand = "0.8.5"
indicatif = "0.16.2"
plotters = "^0.3.0"
num_cpus = "^0.2"
crossbeam-utils = "^0.7"
crossbeam-channel = "^0.4.0"
executors = "^0.9.0"
rayon = "^1.5.3"
ordered-float = "2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
